# Tetris

./: CMakeLists.txt
include/: functions.h  game.h  global.h  menu.h  records.h
src/: functions.c  game.c  main.c  menu.c  records.c
